Commenting DBConnection & DsiplaySongUI